AP-25211: Fixed included columns choices provider and effect types
AP-25211 (WebUI-Migration Logistic Regression Learner)